atendente ao item 6, criando métodos de conversão de json e xml

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 aula-3/semana/br/ufg/inf/mf/pratica/*.class
 /aula-5/cnes/Formatador/nbproject/private/
 /aula-5/cnes/Formatador/target/
+/aula-7/dto/dto/target/
