--- a/aula-7/dto/dto/pom.xml
+++ b/aula-7/dto/dto/pom.xml
@@ -45,5 +45,12 @@
             <version>2.8.5</version>
             <type>jar</type>
         </dependency>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-api</artifactId>
+            <version>5.3.0-M1</version>
+            <scope>test</scope>
+            <type>jar</type>
+        </dependency>
     </dependencies>
 </project>
